processed/jira/txt/LU/LU-12764.txt
Key:        LU-12764
Summary:    ubuntu16 client build failure
Link:       https://jira.whamcloud.com/browse/LU-12764
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Wang Shilong
Reporter:   Wang Shilong
Created:    Mon, 16 Sep 2019 02:00:06 +0000
Updated:    Fri, 4 Oct 2019 13:27:06 +0000
Resolved:   Fri, 4 Oct 2019 13:27:06 +0000

--- Environment ---
NAME="Ubuntu"

VERSION="16.04.5 LTS (Xenial Xerus)"

ID=ubuntu

ID_LIKE=debian

PRETTY_NAME="Ubuntu 16.04.5 LTS"

VERSION_ID="16.04"

HOME_URL="http://www.ubuntu.com/"

SUPPORT_URL="http://help.ubuntu.com/"

BUG_REPORT_URL="http://bugs.launchpad.net/ubuntu/"

VERSION_CODENAME=xenial

UBUNTU_CODENAME=xenial

wangsl@ubuntu:~/lustre-release$ gcc --version

gcc (Ubuntu 5.4.0-6ubuntu1~16.04.11) 5.4.0 20160609

--- Description ---
In file included from include/linux/kernel.h:10:0,
                 from include/linux/list.h:9,
                 from include/linux/random.h:10,
                 from /home/wangsl/lustre-release/lnet/lnet/router.c:25:
/home/wangsl/lustre-release/lnet/lnet/router.c: In function ‘lnet_del_route’:
include/linux/compiler.h:177:26: error: ‘lp’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  case 8: *(__u64 *)res = *(volatile __u64 *)p; break;  \
                          ^
/home/wangsl/lustre-release/lnet/lnet/router.c:754:20: note: ‘lp’ was declared here
  struct lnet_peer *lp;
                    ^
/home/wangsl/lustre-release/lnet/lnet/router.c: At top level:
cc1: error: unrecognized command line option ‘-Wno-stringop-overflow’ [-Werror]
cc1: error: unrecognized command line option ‘-Wno-stringop-truncation’ [-Werror]
cc1: error: unrecognized command line option ‘-Wno-format-truncation’ [-Werror]
cc1: all warnings being treated as errors

--- Comment (pjones, Fri, 4 Oct 2019 13:27:06 +0000) ---
Landed for 2.13

--- Comment (gerrit, Fri, 4 Oct 2019 03:44:52 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/36189/

Subject: LU-12764 lnet: eliminate uninitialized warning

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: a8fbaa1b998f558cdb196822447b2aafe8cf98b5

--- Comment (gerrit, Mon, 16 Sep 2019 02:02:06 +0000) ---
Wang Shilong (wshilong@ddn.com) uploaded a new patch: https://review.whamcloud.com/36189

Subject: LU-12764 lnet: eliminate uninitialized warning

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 0b7daa19f8f6b276244c6b39f533c523b0c51ce3
